fix z-index

--- a/app/scss/particles/_filter.sass
+++ b/app/scss/particles/_filter.sass
@@ -50,7 +50,7 @@
     left: calc(100% + 20px)
     top: -8px
     margin: 0
-    z-index: 2
+    z-index: 3
   &:before
     content: ''
     height: 7px
